3pv_16Kw_deye_hybrid.yaml
Need a 3 pv Inverter

--- a/custom_components/solarman/inverter_definitions/deye_hybrid.yaml
+++ b/custom_components/solarman/inverter_definitions/deye_hybrid.yaml
@@ -27,6 +27,15 @@ parameters:
       registers: [0x00BB]
       icon: 'mdi:solar-power'
 
+      - name: "PV3 Voltage"
+      class: "voltage"
+      state_class: "measurement"
+      uom: "V"
+      scale: 0.1
+      rule: 1
+      registers: [0x0071]
+      icon: 'mdi:solar-power'
+
     - name: "PV1 Voltage"
       class: "voltage"
       state_class: "measurement"
